--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #EF29F5;
     color: #fff;
     text-align: center;
     padding: 1em;
 }
 
 nav {
-    background-color: #eee;
+    background-color: #EF29F5;
     padding: 0.5em;
 }
 
@@ -38,7 +38,7 @@ main {
 }
 
 footer {
-    background-color: #333;
+    background-color: #EF29F5;
     color: #fff;
     text-align: center;
     padding: 1em;
