--- a/style.css
+++ b/style.css
@@ -1,48 +1,12 @@
+/* style.css */
+
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    background-color: rgb(20, 40, 60);
+    color: rgb(240, 248, 255);
+    font-family: "Helvetica", "Arial", sans-serif;
+    font-size: 1.3em;
 }
 
-header {
-    background-color: #EF29F5;
-    color: #fff;
-    text-align: center;
-    padding: 1em;
-}
-
-nav {
-    background-color: #EF29F5;
-    padding: 0.5em;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav li {
-    display: inline;
-    margin-right: 10px;
-}
-
-nav a {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-}
-
-main {
-    padding: 20px;
-}
-
-footer {
-    background-color: #EF29F5;
-    color: #fff;
-    text-align: center;
-    padding: 1em;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+a {
+    color: rgb(255, 111, 207);
 }
